      to stream, this helps keep us from buffering too much information at
      once. (John Arbash Meinel)

  BUG FIXES:

    * Better message when the user needs to set their Launchpad ID.
      (Martin Pool, #289148)

    * Don't call the system ``chdir()`` with an empty path. Sun OS seems
      to give an error in that case. (John Arbash Meinel, #297831)

    * TooManyConcurrentRequests no longer occur when a fetch fails and
      tries to abort a write group.  This allows the root cause (e.g. a
      network interruption) to be reported.  (Andrew Bennetts, #297014)

    * RemoteRepository.get_parent_map now uses fallback repositories.
      (Aaron Bentley, #297991?, #293679?)

  DOCUMENTATION:

  API CHANGES:

    * ``Repository.abort_write_group`` now accepts an optional
      ``suppress_errors`` flag.  Repository implementations that override
      ``abort_write_group`` will need to be updated to accept the new
      argument.  Subclasses that only override ``_abort_write_group``
      don't need to change.

    * Transport implementations must provide copy_tree_to_transport.  A default
      implementation is provided for Transport subclasses.

  TESTING:

    * ``bzr selftest`` now fails if no doctests are found in a module
      that's expected to have them.  (Martin Pool)
      
    * Doctests now only report the first failure.  (Martin Pool)

  INTERNALS:


bzr 1.9 2008-11-07
------------------

This release of Bazaar adds a new repository format, ``1.9``, with smaller
and more efficient index files.  This format can be specified when
creating a new repository, or used to losslessly upgrade an existing
repository.  bzr 1.9 also speeds most operations over the smart server
protocol, makes annotate faster, and uses less memory when making
checkouts or pulling large amounts of data.

  BUG FIXES:

   * Fix "invalid property value 'branch-nick' for None" regression with
     branches bound to svn branches.  (Martin Pool, #293440)
