@@ -33,6 +33,10 @@ IN DEVELOPMENT
     * Don't call the system ``chdir()`` with an empty path. Sun OS seems
       to give an error in that case. (John Arbash Meinel, #297831)
 
+    * Don't crash when requesting log --forward <file> for a revision range
+      starting with a dotted revno.
+      (Vincent Ladeuil, #300055)
+
     * TooManyConcurrentRequests no longer occur when a fetch fails and
       tries to abort a write group.  This allows the root cause (e.g. a
       network interruption) to be reported.  (Andrew Bennetts, #297014)
